[package]
name = "cordl"
author = "Sc2ad"
version = "0.1.0"
edition = "2021"

[dependencies]
brocolib = { git = "https://github.com/StackDoubleFlow/brocolib.git", branch = "il2cpp_v29" }
clap = { version = "3.1.8", features = ["derive"] }
anyhow = { version = "*" }
indent_write = { version = "*" }
color-eyre = "0.6"
itertools = "0.10"
bytes = "*"
byteorder = "1"