[package]
name = "cordl"
author = "Sc2ad"
version = "0.1.0"
edition = "2021"

[dependencies]
brocolib = { git = "https://github.com/StackDoubleFlow/brocolib.git", branch = "il2cpp_v29" }
clap = { version = "4", features = ["derive"] }
anyhow = { version = "*" }
indent_write = { version = "*" }
color-eyre = "0.6"
itertools = "0.11"
bytes = "*"
byteorder = "1"

# utils
pathdiff = "0.2"
walkdir = "2"

[profiles.release]
opt-level = 3
lto = true