[package]
name = "cordl"
author = "Sc2ad"
version = "0.1.0"
edition = "2021"

[dependencies]
brocolib = { git = "https://github.com/Fernthedev/brocolib.git", branch = "fix/type-full-name-generics" }
clap = { version = "4", features = ["derive"] }
anyhow = { version = "*" }
indent_write = { version = "*" }
color-eyre = "0.6"
itertools = "0.11"
bytes = "*"
byteorder = "1"
topological-sort = "0.2"
fs_extra = "*"
include_dir= "*"

# utils
pathdiff = "0.2"
walkdir = "2"
log = "0.4.20"
pretty_env_logger = "0.5.0"

[profiles.release]
opt-level = 3
lto = true
